# kayak

./: .clang-format  CMakeLists.txt  README.md
example/: CMakeLists.txt  described_struct.cpp  struct_update.cpp
examples/: struct_update.cpp
include/kayak/: enum_description.hpp  fixed_string.hpp  struct_description.hpp  struct_descriptor.hpp  struct_update.hpp  type_description.hpp  type_list.hpp
include/kayak/std/: allocator.hpp  array.hpp  optional.hpp  string.hpp  vector.hpp
src/: CMakeLists.txt
test/: CMakeLists.txt  assert.hpp  enum_description.cpp  fixed_string.cpp  std.cpp  struct_description.cpp  struct_descriptor.cpp  struct_update.cpp  type_description.cpp
tests/: CMakeLists.txt  enum_description.cpp  fixed_string.cpp  std.cpp  struct_description.cpp  type_description.cpp
