add_executable(enum_description_test enum_description.cpp)
target_link_libraries(enum_description_test PRIVATE kayak)

add_executable(fixed_string_test fixed_string.cpp)
target_link_libraries(fixed_string_test PRIVATE kayak)

add_executable(struct_description_test struct_description.cpp)
target_link_libraries(struct_description_test PRIVATE kayak)
